--- a/index.html
+++ b/index.html
@@ -1,7 +1,53 @@
+<!DOCTYPE html>
 <html>
 <head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+  <script src="http://code.jquery.com/jquery-1.11.1.min.js"></script>
+  <script src="http://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.js"></script>
+<link href="https://fonts.googleapis.com/css2?family=Anton&display=swap" rel="stylesheet">
+
+
+  <style>
+    body {
+      background-color: #0D79F5;
+      font-family: 'Anton', sans-serif;
+    }
+    #logo {
+      position: relative;
+    }
+    #logo img {
+      position: absolute;
+      top: 0px;
+      right: 0px;
+      width: 60px;
+      height: 60px;
+    }
+    h1 {
+      color: #fff;
+      text-transform: uppercase;
+      font-size: 25px;
+    }
+    #pagetitle{
+      position: absolute;
+      top: 80px;
+      left: 50%;
+      width: 300px;
+      margin:0 0 0 -150px;
+      text-align:center;
+    }
+  </style>
 </head>
 <body>
-<h1>hello world</h1>
+  <div id="logo">
+    <img src="splashisabara.png" class="ribbon"/>
+  </div>
+
+  <div id="pagetitle">
+    <h1>Please enter you PIN code</h1>
+  </div>
+  
+
+  
 </body>
 </html>
