--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 </head>
 <body>
   <div id="logo">
-    <img src="splashisabara.png" class="ribbon"/>
+    <img src="splashIsabara.png" class="ribbon"/>
   </div>
 
   <div id="pagetitle">
