--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-]<!DOCTYPE html>
+<!DOCTYPE html>
 <html>
 <head>
   <meta charset="UTF-8">
@@ -45,7 +45,7 @@
     <img src="splashisabara.png" class="ribbon"/>
   </div>
   
-  <form class="" action="shenxun://action1" method="post">
+  <form class="" action="shenxun://action1" method="post" target="_self">
     <div id="pagetitle">
       <h1>Please enter you PIN code</h1>
       <input type="password" name="pincode" id="pincode" value="" autocomplete="off">
