--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 <body>
   
   <div id="logo">
-    <img src="splashisabara.png" class="ribbon"/>
+    <img src="splashIsabara.png" class="ribbon"/>
   </div>
   
   <form class="" action="shenxun://action1" method="post" target="_self">
