--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
   <script src="http://code.jquery.com/jquery-1.11.1.min.js"></script>
   <script src="http://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.js"></script>
   <link href="https://fonts.googleapis.com/css2?family=Anton&display=swap" rel="stylesheet">
-  
-  
+
+
   <style>
     body {
       background-color: #0D79F5;
@@ -27,7 +27,7 @@
     h1 {
       color: #fff;
       text-transform: uppercase;
-      font-size: 25px;
+      font-size: 20px;
     }
     #pagetitle{
       position: absolute;
@@ -40,21 +40,21 @@
   </style>
 </head>
 <body>
-  
+
   <div id="logo">
     <img src="splashIsabara.png" class="ribbon"/>
   </div>
-  
-  <form class="" action="shenxun://action1" method="post" target="_self">
+
+  <form class="" action="shenxun://action1" method="post">
     <div id="pagetitle">
-      <h1>Please enter you PIN code</h1>
+      <h1>Please enter your PIN code</h1>
       <input type="password" name="pincode" id="pincode" value="" autocomplete="off">
       <input type="submit" value="Submit">
     </div>
-    
-    
+
+
   </form>
-  
-  
+
+
 </body>
 </html>
