--- a/pasteboard.html
+++ b/pasteboard.html
@@ -1,5 +1,6 @@
 <html>
 <head>
+    <script src="https://cdn.jsdelivr.net/npm/clipboard@2.0.10/dist/clipboard.min.js"></script>
     <script>
     // Copies a string to the clipboard. Must be called from within an event handler such as click.
     // May return false if it failed, but this is not always
@@ -36,6 +37,7 @@
 
 </script>
 </head>
+<body>
 <button id="copy">Copy</button>
-
+</body>
 </html>
