--- a/pasteboard.html
+++ b/pasteboard.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-    <script src="https://cdn.jsdelivr.net/npm/clipboard@2.0.10/dist/clipboard.min.js"></script>
+    <script src="clipboard.min.js"></script>
     
 </head>
 <body>
