--- a/pasteboard.html
+++ b/pasteboard.html
@@ -4,6 +4,7 @@
     
 </head>
 <body>
+    var clipboard = new ClipboardJS('.btn');
     <button class="btn" data-clipboard-text="Just because you can doesn't mean you should — clipboard.js">
         Copy to clipboard
     </button>
