--- a/pasteboard.html
+++ b/pasteboard.html
@@ -7,7 +7,7 @@
   </head>
   <body>
     <!-- 1. Define some markup -->
-    <button class="btn" data-clipboard-text="1">Copy</button>
+    <button class="btn" data-clipboard-text="tastelife://playlist?12345">Copy</button>
     <button class="btn" data-clipboard-text="2">Copy</button>
     <button class="btn" data-clipboard-text="3">Copy</button>
 
@@ -30,10 +30,7 @@
         console.info('Trigger:', e.trigger);
       });
     </script>
-    
-    <button class="btn" data-clipboard-text="Just because you can doesn't mean you should — clipboard.js">
-        Copy to clipboard
-    </button>
+
   </body>
 </html>
 
